Commit Sidemenu and Search

--- a/WeatherDay/View/Controller/SideMenu/Cell/1.Locations/CellLocations/LocationsTableViewCell.xib
+++ b/WeatherDay/View/Controller/SideMenu/Cell/1.Locations/CellLocations/LocationsTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <visualEffectView opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6nU-bD-06K">
+                    <visualEffectView opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6nU-bD-06K">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kEl-sK-YcB">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
